<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (C) 2014 John Hunt <john.alma.hunt@gmail.com>

This file is part of Tetravex Android.

Tetravex Android is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Tetravex Android is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Tetravex Android.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="pref_size_list"
        android:title="@string/pref_title_size"
        android:defaultValue="3"
        android:entries="@array/pref_size_list_titles"
        android:entryValues="@array/pref_size_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <CheckBoxPreference
        android:key="pref_color_tiles"
        android:title="@string/pref_title_color_tiles"
        android:summary="@string/pref_description_color_tiles"
        android:defaultValue="true" />

</PreferenceScreen>
